re PR c++/35650 (Can't bind ref-to-function through using-decl. in namespace)

PR c++/35650
	* parser.c (cp_parser_lookup_name): Look through single function
	OVERLOAD.

	* g++.dg/init/ref17.C: New test.

From-SVN: r134789